--- a/catalog/templates/base_list.html
+++ b/catalog/templates/base_list.html
@@ -1,4 +1,5 @@
 {% extends 'home.html' %}
+{% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
@@ -6,13 +7,13 @@
         {% for i in product %}
         <div class="col">
           <div class="card shadow-sm">
-            <img src="{{product.photo}}">
+            <img class="card-img-top" src="{{ i.image | media_filter }}">
             <div class="card-body">
               <p class="card-text">{{ i.name }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">Купить сейчас</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Открыть</button>
+                  <a class="btn btn-primary" href="{% url 'catalog:product_detail' i.pk %}" role="button">Открыть</a>
                 </div>
               </div>
             </div>
