--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -10,6 +10,7 @@
                     <img class="card-img-top" src="{{ i.image | media_filter }}">
                     <div class="card-body">
                         <p class="card-text">{{ i.name }}</p>
+                        <p class="card-text">{{ i.description|truncatechars:100 }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">Купить сейчас</button>
