--- a/catalog/templates/product_detail.html
+++ b/catalog/templates/product_detail.html
@@ -9,8 +9,9 @@
                     <img class="card-img-top" src="{{ product.image | media_filter }}">
                     <div class="card-body">
                         <p class="card-text">{{ product.name }}</p>
+                        <p class="card-text">Категория: {{ product.category }}</p>
                         <p class="card-text">{{ product.description }}</p>
-                        <p class="card-text">{{ product.price }} рублей</p>
+                        <p class="card-text">Цена: {{ product.price }} рублей</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">Купить сейчас</button>
