--- a/catalog/templates/contact.html
+++ b/catalog/templates/contact.html
@@ -1,19 +1,16 @@
 {% extends 'home.html' %}
-{% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
             <div class="col">
                 <div class="card shadow-sm">
                     <div class="card-body">
-                        <p class="card-text">Оставьте свой номер здесь</p>
-                        <p class="card-text"></p>
+                        <p class="card-text">Оставьте свой номер здесь:</p>
+                        <input class="form-control" type="text" placeholder="Введите номер телефона" aria-label="default input example">
+                        <p class="card-text">Или позвоните нам</p>
+                        <p class="card-text">8-800-555-35-35</p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Купить сейчас</button>
-                                <a class="btn btn-primary" href="{% url 'catalog:product_detail' i.pk %}" role="button">Открыть</a>
-                            </div>
                         </div>
                     </div>
                 </div>
