--- a/catalog/templates/contact.html
+++ b/catalog/templates/contact.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
@@ -8,8 +8,7 @@
                     <div class="card-body">
                         <p class="card-text">Оставьте свой номер здесь:</p>
                         <input class="form-control" type="text" placeholder="Введите номер телефона" aria-label="default input example">
-                        <p class="card-text">Или позвоните нам</p>
-                        <p class="card-text">8-800-555-35-35</p>
+                        <p class="card-text">Наш телефон: 8-800-555-35-35</p>
                         <div class="d-flex justify-content-between align-items-center">
                         </div>
                     </div>
