--- a/catalog/templates/home-1.html
+++ b/catalog/templates/home-1.html
@@ -4,24 +4,27 @@
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            {% for i in product %}
             <div class="col">
                 <div class="card shadow-sm">
-                    <img class="card-img-top" src="{{ product.image | media_filter }}">
+                    <img class="card-img-top" src="{{ i.image | media_filter }}">
                     <div class="card-body">
-                        <p class="card-text">{{ product.name }}</p>
-                        <p class="card-text">Категория: {{ product.category }}</p>
-                        <p class="card-text">{{ product.description }}</p>
-                        <p class="card-text">Цена: {{ product.price }} рублей</p>
+                        <p class="card-text">{{ i.name }}</p>
+                        <p class="card-text">Категория: {{ i.category }}</p>
+                        <p class="card-text">{{ i.description|truncatechars:100 }}</p>
+                        <p class="card-text">Цена: {{ i.price }} рублей</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">Купить сейчас</button>
+                                <a class="btn btn-primary" href="{% url 'catalog:product_detail' i.pk %}" role="button">Открыть</a>
                             </div>
                         </div>
-                        <p><small>Добавлен {{product.created_at}}</small></p>
-                        <p><small>Изменен {{product.updated_at}}</small></p>
+                        <p><small>Добавлен {{i.created_at}}</small></p>
+                        <p><small>Изменен {{i.updated_at}}</small></p>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
 </div>
