--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -181,7 +181,7 @@
 
 
 <header data-bs-theme="dark">
-    {% include 'includes/inc_menu.html' %}
+    {% include 'catalog/includes/inc_menu.html' %}
 </header>
 
 <main>
@@ -207,9 +207,9 @@
 <footer class="text-body-secondary py-5">
     <div class="container">
         <p class="float-end mb-1">
-            <a href="#">Back to top</a>
+            <a href="#">Наш блог</a>
         </p>
-        <p class="mb-0"><a href="contact.html">Контактная информация</a></p>
+        <p class="mb-0"><a href="/contacts/">Контактная информация</a></p>
     </div>
 </footer>
 <script src="{% static '/js/bootstrap.bundle.min.js' %}"
