--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'catalog/base.html' %}
 {% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
@@ -8,17 +8,17 @@
                 <div class="card shadow-sm">
                     <img class="card-img-top" src="{{ product.image | media_filter }}">
                     <div class="card-body">
-                        <p class="card-text">{{ product.name }}</p>
-                        <p class="card-text">Категория: {{ product.category }}</p>
-                        <p class="card-text">{{ product.description }}</p>
-                        <p class="card-text">Цена: {{ product.price }} рублей</p>
+                        <p class="card-text">{{ object.name }}</p>
+                        <p class="card-text">Категория: {{ object.category }}</p>
+                        <p class="card-text">{{ object.description }}</p>
+                        <p class="card-text">Цена: {{ object.price }} рублей</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">Купить сейчас</button>
                             </div>
                         </div>
-                        <p><small>Добавлен {{product.created_at}}</small></p>
-                        <p><small>Изменен {{product.updated_at}}</small></p>
+                        <p><small>Добавлен {{object.created_at}}</small></p>
+                        <p><small>Изменен {{object.updated_at}}</small></p>
                     </div>
                 </div>
             </div>
