Homework 22.1 create Version + formset

--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -193,7 +193,7 @@
                 <p class="lead text-body-secondary">Заказывайте прямо сейчас новейшие смартфоны и бытовую технику для
                     вас и вашего дома</p>
                 <p>
-                    <a class="btn btn-primary my-2" href="{{% url 'catalog:product_create'%}}">Создать продукт</a>
+                    <a class="btn btn-primary my-2" href="{% url 'catalog:product_create' %}">Создать продукт</a>
                 </p>
             </div>
         </div>
