--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -192,9 +192,11 @@
                 <h1 class="fw-light">Интернет-магазин Clouds</h1>
                 <p class="lead text-body-secondary">Заказывайте прямо сейчас новейшие смартфоны и бытовую технику для
                     вас и вашего дома</p>
+                {% if user.is_authenticated %}
                 <p>
                     <a class="btn btn-primary my-2" href="{% url 'catalog:product_create' %}">Создать продукт</a>
                 </p>
+                {% endif %}
             </div>
         </div>
     </section>
