--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -11,7 +11,7 @@
                 <button type="submit" class="btn btn-primary">
                     Войти
                 </button>
-                <p><a href="{% url 'users:password_reset' %}" class="link-primary">Забыли пароль?</a></p>
+                <p><a href="{% url 'users:reset_password' %}" class="link-primary">Забыли пароль?</a></p>
             </div>
         </div>
     </form>
