--- a/users/templates/users/password_reset_form.html
+++ b/users/templates/users/password_reset_form.html
@@ -1,6 +1,7 @@
 {% extends 'catalog/base.html' %}
 {% block content %}
 <div class="container">
+    <h3>Восстановление пароля</h3>
     <form class="row" method="post" enctype="multipart/form-data">
         <div class="col-6">
             <div class="card">
@@ -9,7 +10,7 @@
                     {{ form.as_p }}
                 </div>
                 <button type="submit" class="btn btn-primary">
-                    Войти
+                    Отправить
                 </button>
             </div>
         </div>
