Homework 22.2 login, User

--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,3 +1,7 @@
+{% extends 'catalog/base.html' %}
 {% block content %}
-Инструкция по восстановлению пароля отправлена на указанный email
+  <p>
+    Мы отправили вам по электронной новый пароль.
+    Если он не пришел в течение нескольких минут, проверьте папку со спамом.
+  </p>
 {% endblock %}
