--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -9,6 +9,7 @@
           <h4>Навигация</h4>
           <ul class="list-unstyled">
             <li><a href="{% url 'catalog:index'%}" class="text-white">Главная</a></li>
+            <li><a href="{% url 'catalog:category_list' %}" class="text-white">Категории</a></li>
             {% if user.is_authenticated %}
             <li><a href="{% url 'users:logout'%}" class="text-white">Выход</a></li>
             {% else %}
